2005-09-28  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac: Cleaned up quotations. The whole file is still a
	bit of a mess, though...

2005-09-27  Prakash Punnoor <prakash@punnoor.de>

	* src/al_mixfunc.c, src/al_mixfunc.h, src/al_mixmanager.c:
	minor clean-ups and adding indirection for mixing n streams
	function

	* configure.ac, src/Makefile.in,
	src/arch/i386/x86_cpu_caps_detect_prk.nasm,
	src/arch/i386/x86_cpu_caps_prk.c,
	src/arch/i386/x86_cpu_caps_prk.h,
	src/arch/portable/cpu_caps.c,
	src/al_cpu_caps.h, alc/alc_context.c: added x86 cpu caps
	detection/framework to safely use SIMD code in OpenAL

2005-09-27  Elias Naur <elias@oddlabs.com>

	* linux/src/al_filter.c: Disabled
	_AL_CUTTOFF_ATTENUATION to avoid problems with
	too little distance attenuation. For now, I kept
	the #define in case any problems show up.
	
2005-09-26  Elias Naur <elias@oddlabs.com>

	* linux/src/al_source.c: Don't set source new_readindex
	and new_soundpos on underflow to avoid a race condition.
	
2005-09-26  Elias Naur <elias@oddlabs.com>

	* linux/src/al_queue.c: Made alSourceQueueBuffers and
	alSourceUnqueueBuffers take alLockMixBuf to avoid
	a race condition with the mixer thread. Their behaviour now
	matches alSourceStop and alSourcePlay that can also manipulate
	playing sources.

2005-09-25  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac, src/Makefile.in: renamed i386_OBJS to x86_OBJS,
	added it to x86_64; added AC_OBJS to CLEAN_FILES in latter file

2005-09-24  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/floatmul.c: fix up and drop unneeded saturation;
	use 5 bits more precision for gain

	* configure.ac: reactivate fixed i386 floatmul

	* src/mixaudio16.c, src/mixaudio16.c: clean-up, remove old MMX
	support and mixing of dst into itself

	* src/al_buffer.h, src/al_buffer.c: void* should be ALvoid* at
	some places

2005-09-23  Sven Panne  <sven.panne@aedion.de>

	* admin/openal.spec: Added an up-to-date .spec file, based on the
	one used for SuSE 9.3.