@@ -1,3 +1,8 @@
+2005-09-29  Elias Naur <elias@oddlabs.com>
+
+	* linux/src/al_filter.c: Added comment about the previous value
+	of _AL_CUTTOFF_ATTENUATION and why it is now 0.
+
 2005-09-28  Prakash Punnoor <prakash@punnoor.de>
 
 	* configure.ac: Cleaned up quotations. The whole file is still a
